kubernetes/apps/kube-prometheus-stack/app/grafana/namespace.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
